melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_poison.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module attributes {llvm.data_layout = ""} {
  llvm.func @foo(%arg0: !llvm.struct<(i64)>) {
    %0 = llvm.mlir.poison : !llvm.struct<(i64)>
    llvm.return
  }
}

